<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="fill_parent" android:layout_width="fill_parent">
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/create_game_instructions" android:text="@string/create_game_instructions"></TextView>
<Spinner android:layout_below="@+id/create_game_instructions" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" android:id="@+id/north_spinner" android:prompt="@string/north"></Spinner>


<Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/south_spinner" android:layout_centerInParent="true" android:prompt="@string/south" android:layout_below="@+id/west_spinner"></Spinner><Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:prompt="@string/east" android:id="@+id/east_spinner" android:layout_alignParentRight="true" android:layout_below="@+id/north_spinner"></Spinner><Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/southeast_spinner" android:layout_alignParentRight="true" android:layout_below="@+id/south_spinner"></Spinner><Button android:layout_below="@+id/southeast_spinner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/create_game_button" android:text="@string/create_game_button_label"></Button><Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/west_spinner" android:prompt="@string/west" android:layout_alignParentLeft="true" android:layout_below="@+id/east_spinner"></Spinner>





</RelativeLayout>
